[gd_scene load_steps=2 format=3 uid="uid://cgameover001"]

[ext_resource type="Script" path="res://game/scripts/battle/GameOverScreen.gd" id="1_script"]

[node name="GameOverScreen" type="CanvasLayer"]
layer = 20
script = ExtResource("1_script")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.6)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -50.0
offset_right = 80.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="Separator1" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="MessageLabel" type="Label" parent="Panel/VBox"]
layout_mode = 2
text = "Your party was defeated..."
horizontal_alignment = 1

[node name="Separator2" type="HSeparator" parent="Panel/VBox"]
layout_mode = 2

[node name="RetryButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Retry Battle"

[node name="TitleButton" type="Button" parent="Panel/VBox"]
layout_mode = 2
text = "Return to Title"
